--- a/css/Today.css
+++ b/css/Today.css
@@ -14,7 +14,7 @@
 
 .scrollPane  > .viewport {
     -fx-border-radius: 10;
-    /* -fx-background-color: #424252; */
+    -fx-background-color: #424252; 
     -fx-border: none;   
 }
 /* darker bg color for every odd element - doesn't work*/
