--- a/css/Today.css
+++ b/css/Today.css
@@ -11,43 +11,13 @@
 .default-color2.chart-pie { -fx-pie-color: #FEBF44; }
 .default-color3.chart-pie { -fx-pie-color: #FF687E; }
 .default-color4.chart-pie { -fx-pie-color: #8F7AD8; }
+.default-color5.chart-pie { -fx-pie-color: #DEFFF2; }
+.default-color6.chart-pie { -fx-pie-color: #FEBF44; }
+.default-color7.chart-pie { -fx-pie-color: #FF687E; }
 
-.scrollPane  > .viewport {
-    -fx-border-radius: 10;
-    -fx-background-color: #424252; 
-    -fx-border: none;   
-}
-/* darker bg color for every odd element - doesn't work*/
-/* .scrollPane:nth-child(odd) .viewport:nth-child(odd) {
-    -fx-background-color: #c4c4c4;
-} */
-.scroll-bar{
-    -fx-background-color: #2a2a33;
-    -fx-background-radius: 2em;
-}
-.scroll-bar:vertical .thumb {
-    -fx-background-color: #30A4FB;
-    -fx-background-insets: 0 4 0 4;
-    -fx-background-radius: 2em;
-}
-.scroll-bar:horizontal .thumb:pressed,
-.scroll-bar:vertical .thumb:pressed {
- -fx-background-color: rgb(46, 134, 202);
-}
-.scroll-bar:vertical .increment-arrow {
-    -fx-background-color: #30A4FB;
-    -fx-shape: "M 0 0 L 4 8 L 8 0 Z";
-    -fx-padding: 0.25em;
-    -fx-rotate: 0;
-}
-.scroll-bar:vertical .decrement-arrow {
-    -fx-background-color: #30A4FB;
-    -fx-shape: "M 0 0 L 4 8 L 8 0 Z";
-    -fx-padding: 0.25em;
-    -fx-rotate: 180;
-}   
 .chart-pie-label-line {
     -fx-stroke: #FFFFFF;
+    
     -fx-fill: #FFFFFF;
 }
 .chart-pie-label {
@@ -77,4 +47,39 @@
 }
 .progress-bar {
     -fx-accent: #2DE5A6;
+}
+.scrollPane  > .viewport {
+    -fx-background-color: #424252; 
+    -fx-border-color: transparent;   
+}
+.scroll-pane {
+    -fx-background-color: #1D2027;
+}
+
+.scroll-bar:horizontal, .scroll-bar:vertical{
+    -fx-background-color:transparent;
+}
+
+.increment-button, .decrement-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
+
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track{
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-radius: 5em;
+}
+
+.scroll-bar:horizontal .thumb,
+.scroll-bar:vertical .thumb {
+    -fx-background-color: #30A4FB;
+    -fx-background-radius: 5em;
+}
+.scroll-bar:vertical .increment-arrow {
+    -fx-background-color: #30A4FB;
+}
+.scroll-bar:vertical .decrement-arrow {
+    -fx-background-color: #30A4FB;
 }
